Fix menu on mobile

--- a/docs/css/navigation.css
+++ b/docs/css/navigation.css
@@ -109,7 +109,7 @@
 
 /* 48em = 768px */
 
-@media (min-width: 48em) {
+@media only screen and (min-width : 1000px) {
   .header li {
     float: left;
   }
